--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,11 @@ environment:
   sdk: '>=2.19.4 <3.0.0'
 
 dependencies:
+  camera: ^0.10.4
   flutter:
     sdk: flutter
+  provider: ^6.0.5
+  test: ^1.22.0
   
 
 dev_dependencies:
