--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,11 @@ environment:
   sdk: '>=2.19.4 <3.0.0'
 
 dependencies:
+  firebase_core: ^2.10.0
+  firebase_database: ^10.1.1
   flutter:
     sdk: flutter
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
