--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,9 @@ environment:
   sdk: '>=2.19.4 <3.0.0'
 
 dependencies:
+  camera: ^0.10.4
+  cloud_firestore: ^4.5.3
+  firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
   firebase_database: ^10.1.1
   firebase_auth: ^4.4.2
