--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
   firebase_database: ^10.1.1
+  firebase_storage: ^11.1.2
   flutter:
     sdk: flutter
   get: ^4.6.5
