--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   get: ^4.6.5
   mockito: ^5.4.0
   cloud_firestore: ^4.5.3
+  firebase_storage: ^11.1.2
 
 dev_dependencies:
   flutter_test:
