--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   mockito: ^5.4.0
   cloud_firestore: ^4.5.3
   firebase_storage: ^11.1.2
+  google_sign_in: ^6.1.0
 
 dev_dependencies:
   flutter_test:
