--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,4 @@ linux/flutter/generated_plugins.cmake
 windows/flutter/generated_plugin_registrant.cc
 windows/flutter/generated_plugin_registrant.h
 windows/flutter/generated_plugins.cmake
+functions/mp23-astr-firebase-adminsdk-3gl9w-984d3164ee.json
