--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   mockito: ^5.4.0
   google_sign_in: ^6.1.0
   firebase_messaging: ^14.6.0
+  flutter_local_notifications: ^14.0.0+2
 
 dev_dependencies:
   flutter_test:
